Added Folio Filtering
